css: fix an alignment of dropdown button on webkit

--- a/trunk/openPLM/plmapp/static/css/openplm.css
+++ b/trunk/openPLM/plmapp/static/css/openplm.css
@@ -1444,6 +1444,10 @@ ul.tbi li {
     color: white;
 }
 
+.tb-dropdown-toggle {
+    margin-top: 0;
+}
+
 .identity_card .detach-form {
     display: none;
 }
